--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -23,7 +23,6 @@
         <ul>
             <li><a href="/index.html">Accueil</a></li>
             <li><a href="./presentation.html">Présentation</a></li>
-            <li><a href="./participer.html">PARTICIPER</a></li>
             <li><a href="./reglement.html">Réglement du concours</a></li>
             <li><a href="./jury.html" class="menu-selected">JURY</a></li>
             <li><a href="./prix.html">PRIX</a></li>
@@ -32,6 +31,11 @@
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="../images/logo.png" alt=""></a>
+            <ul class="row">
+                <li class="text-white mx-1" onclick="setLanguage('fr')">FR</li>
+                <li class="text-white mx-1">/</li>
+                <li class="text-white mx-1" onclick="setLanguage('ar')">AR</li>
+            </ul>
             <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent">
                 <img src="../images/icons/openNav.svg" alt="" id="openm">
             </button>
@@ -44,14 +48,14 @@
                     <div class="container-fluid" style="overflow-y: scroll;">
                         <div class="row text-white">
                             <div class="col-md-6 mb-5 jury">
-                                <h1 key="title">JURY</h1>
+                                <h1 dir="auto" key="title">JURY</h1>
                             </div>
                         </div>
                         <div class="row text-white">
                             <div class="col-md-6 jury">
-                                <h4 class="text-white animate__animated animate__bounceInLeft" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">Le jury est une instance souveraine qui ne doit comporter aucun conflit d’intérêt, ni être soumis à une quelconque influence. <img class="quote p-2" src="../images/icons/quote2.svg"
+                                <h4 class="text-white animate__animated animate__bounceInLeft" dir="auto" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">Le jury est une instance souveraine qui ne doit comporter aucun conflit d’intérêt, ni être soumis à une quelconque influence. <img class="quote p-2" src="../images/icons/quote2.svg"
                                         alt=""></h4>
-                                <ul class="animate__animated animate__bounceInLeft animate__delay-1s" key="text">
+                                <ul class="animate__animated animate__bounceInLeft animate__delay-1s" dir="auto" key="text">
                                     <li>• Le jury a pour mission de sélectionner les finalistes et de désigner les lauréats selon les critères de sélection définis à l’article.
                                     </li><br>
                                     <li>• Le jury examine les œuvres et les travaux des candidats de manière anonyme en se fondant exclusivement sur les critères indiqués dans le règlement du concours. L’anonymat est de mise jusqu’à la proclamation finale des résultats.
@@ -60,8 +64,8 @@
                                 </ul>
                             </div>
                             <div class="col-md-6 animate__animated animate__bounceInUp animate__delay-2s d-flex flex-column jury">
-                                <button class="py-1 px-5 rounded btn-2" key="critere-title" style="color: #3A1E3A; font-weight: 800;">LES CRITERES DE SELECTION</button><br><br>
-                                <p key="critere-desc">Le jury a été sélectionné en réponse à 5 critères : <br><br>
+                                <button class="py-1 px-5 rounded btn-2" dir="auto" key="critere-title" style="color: #3A1E3A; font-weight: 800;">LES CRITERES DE SELECTION</button><br><br>
+                                <p dir="auto" key="critere-desc">Le jury a été sélectionné en réponse à 5 critères : <br><br>
                                     <span style="color: #98A6D4;" class="h2">1.</span> Expertise solide dans leurs domaines de compétences.<br>
                                     <span style="color: #98A6D4;" class="h2">2.</span> Notoriété <br>
                                     <span style="color: #98A6D4;" class="h2">3.</span> Crédibilité <br>
@@ -72,18 +76,18 @@
                         </div>
                         <div class="mt-5 row text-white">
                             <div class="col-md-6 mb-5 comite">
-                                <h1 key="title">COMITE SCIENTIFIQUE</h1>
+                                <h1 dir="auto" key="title">COMITE SCIENTIFIQUE</h1>
                             </div>
                         </div>
                         <div class="row text-white comite">
                             <div class="col-md-5 py-5 comite">
-                                <h4 class="text-white" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">
+                                <h4 class="text-white" dir="auto" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">
                                     Le comité scientifique examine toutes les candidatures reçues et les filtre,
                                     rejetant celles non conformes et validant celles qui répondent aux exigences du
                                     concours, le jury intervient à l’étape suivante pour notation et évaluation.<img
                                         class="quote p-2" src="../images/icons/quote2.svg" alt=""></h4>
                             </div>
-                            <div class="col-sm-12 col-md text-center" key="com-1">
+                            <div class="col-sm-12 col-md text-center" dir="auto" key="com-1">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/youssef.png"
                                     alt="">
                                 <p class="">
@@ -96,7 +100,7 @@
                                     <li>Expérience dans les Médias</li>
                                 </ul>
                             </div>
-                            <div class="col-sm-12 col-md text-center" key="com-2">
+                            <div class="col-sm-12 col-md text-center" dir="auto" key="com-2">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hassan.png" alt="">
                                 <p class="">
                                     <span class="comite-name">M. HASSAN LAHLOU</span>
@@ -106,7 +110,7 @@
                                     <li>Consul honoraire de la république de croitie à casablanca.</li>
                                 </ul>
                             </div>
-                            <div class="col-sm-12 col-md text-center" key="com-3">
+                            <div class="col-sm-12 col-md text-center" dir="auto" key="com-3">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nabil.png" alt="">
                                 <p class="">
                                     <span class="comite-name">M. NABIL JEBBARI</span>
@@ -119,12 +123,12 @@
                             </div>
                         </div>
                         <div class="row text-white mt-5">
-                            <div class="col-md-6 mb-5">
-                                <h1>MEMBRES DU JURY</h1>
+                            <div class="col-md-6 mb-5 jury-members ">
+                                <h1 dir="auto" key="title">MEMBRES DU JURY</h1>
                             </div>
                         </div>
                         <div class="mt-5 row text-white g-2 jury-members">
-                            <div key="j1" class="col-md-4 text-center">
+                            <div dir="auto" key="j1" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lkhmari.png" alt="">
                                 <p class="">
                                     <span class="vert">NOUR-EDDINE LAKHMARI</span>
@@ -137,7 +141,7 @@
                                     <li>• Connu pour ses films réalisés à Casablanca</li>
                                 </ul>
                             </div>
-                            <div key="j2" class="col-md-4 text-center">
+                            <div dir="auto" key="j2" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/karim.png" alt="">
                                 <p class="">
                                     <span class="vert">Dr. KARIM ADYEL</span>
@@ -149,7 +153,7 @@
                                     <li>• Arbitre au Tribunal Arbitral du Sport (TAS)</li>
                                 </ul>
                             </div>
-                            <div key="j3" class="col-md-4 text-center">
+                            <div dir="auto" key="j3" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/derhem.png" alt="">
                                 <p class="">
                                     <span class="vert">MOHAMED DERHEM</span>
@@ -162,7 +166,7 @@
                                     <li>• Entrepreneur</li>
                                 </ul>
                             </div>
-                            <div key="j4" class="col-md-4 text-center">
+                            <div dir="auto" key="j4" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lahlou.png" alt="">
                                 <p class="">
                                     <span class="vert">HICHAM LAHLOU</span>
@@ -173,7 +177,7 @@
                                     <li>• Célèbre et crédible • Expérience internationale et entrepreneur</li>
                                 </ul>
                             </div>
-                            <div key="j5" class="col-md-4 text-center">
+                            <div dir="auto" key="j5" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/abid.png" alt="">
                                 <p class="">
                                     <span class="vert">SAAD ABID</span>
@@ -185,7 +189,7 @@
                                     <li>• Présence forte sur le digital</li>
                                 </ul>
                             </div>
-                            <div key="j6" class="col-md-4 text-center">
+                            <div dir="auto" key="j6" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nezha.png" alt="">
                                 <p class="">
                                     <span class="vert">NEZHA BELKADY</span>
@@ -196,7 +200,7 @@
                                     <li>• CO-FONDATRICE DE STUDIO DES ARTS VIVANTS</li>
                                 </ul>
                             </div>
-                            <div key="j7" class="col-md-4 text-center">
+                            <div dir="auto" key="j7" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mouna.png" alt="">
                                 <p class="">
                                     <span class="vert">MOUNA HACHIM</span>
@@ -208,7 +212,7 @@
                                     <li>• Crédibilité • Patrimoine</li>
                                 </ul>
                             </div>
-                            <div key="j8" class="col-md-4 text-center">
+                            <div dir="auto" key="j8" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/oudaha.png" alt="">
                                 <p class="">
                                     <span class="vert">MOHAMED OUDAHA</span>
@@ -220,7 +224,7 @@
                                     <li>• Le créatif Marocain le plus primé dans le monde </li>
                                 </ul>
                             </div>
-                            <div key="j9" class="col-md-4 text-center">
+                            <div dir="auto" key="j9" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/jall.png" alt="">
                                 <p class="">
                                     <span class="vert">MOHAMED JALL</span>
@@ -232,7 +236,7 @@
                                     <li>• Expérience internationale</li>
                                 </ul>
                             </div>
-                            <div key="j10" class="col-md-4 text-center">
+                            <div dir="auto" key="j10" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mazned.png" alt="">
                                 <p class="">
                                     <span class="vert text-uppercase">Brahim El Mazned</span>
@@ -245,7 +249,7 @@
                                    <li>• Expert auprès de l’UNESCO</li>
                                 </ul>
                             </div>
-                            <div key="j11" class="col-md-4 text-center">
+                            <div dir="auto" key="j11" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" height="120px" width="120px" src="../images/comite/adnane.png" alt="">
                                 <p class="">
                                     <span class="vert">AZIZ DADANE</span>
@@ -257,7 +261,7 @@
                                     <li>• Expert en nouvelle technologies</li>
                                 </ul>
                             </div>
-                            <div key="j12" class="col-md-4 text-center">
+                            <div dir="auto" key="j12" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hind.png" alt="">
                                 <p class="">
                                     <span class="vert">HIND LAIDI</span>
@@ -269,7 +273,7 @@
                                     <li>• Experience internationale</li>
                                 </ul>
                             </div>
-                            <div key="j13" class="col-md-4 text-center">
+                            <div dir="auto" key="j13" class="col-md-4 text-center">
                                 <div style="width: 120px; height: 120px;" class="rounded-circle bg-secondary mb-3 mx-auto"></div>
                                 <p class="">
                                     <span class="vert  text-uppercase">Yassine Gamal </span>
@@ -283,7 +287,7 @@
                         </div>
                         <div class="row jury-members">
                             <div class="col-md-9"></div>
-                            <div class="col-md-3 sm-text-center"><button key="cta" class="mt-5 py-2 px-5 rounded-pill align-self-end btn-1">Comment
+                            <div class="col-md-3 sm-text-center"><button dir="auto" key="cta" class="mt-5 py-2 px-5 rounded-pill align-self-end btn-1">Comment
                                 participer</button></div>
                         </div>
                         <div class="row m-3 p-2 border-bott social-icons">
@@ -294,6 +298,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/flickity.pkgd.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/video-background.js"></script>
