--- a/src/pages/presentation.html
+++ b/src/pages/presentation.html
@@ -25,7 +25,6 @@
         <ul>
             <li><a href="/index.html">Accueil</a></li>
             <li><a href="./presentation.html" class="menu-selected">Présentation</a></li>
-            <li><a href="./participer.html">PARTICIPER</a></li>
             <li><a href="./reglement.html">Réglement du concours</a></li>
             <li><a href="./jury.html">JURY</a></li>
             <li><a href="./prix.html">PRIX</a></li>
@@ -34,6 +33,11 @@
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
+            <ul class="row">
+                <li class="text-white mx-1" onclick="setLanguage('fr')">FR</li>
+                <li class="text-white mx-1">/</li>
+                <li class="text-white mx-1" onclick="setLanguage('ar')">AR</li>
+            </ul>
             <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent">
                 <img src="../images/icons/openNav.svg" alt="" id="openm">
             </button>
@@ -49,7 +53,7 @@
                                 <img class="animate__animated animate__bounceInDown animate__slow" src="../images/presentation.svg" width="300px" alt="">
                                 <div class="row desk mt-5 animate__animated animate__fadeIn animate__delay-1s">
                                     <div class="col-md-12 presentation">
-                                        <h4 class="text-white" key="partners">Nos Partenaires</h4>
+                                        <h4 class="text-white" dir="auto" key="partners">Nos Partenaires</h4>
                                     </div>
                                     <div class="col-3"><img src="../images/partenaire.png" class="w-100" alt="">
                                     </div>
@@ -63,10 +67,10 @@
                             </div>
                             <div class="col-md-6 d-flex presentation pres flex-column border-left animate__animated animate__fadeIn animate__delay-2s">
                                 <img src="../images/logo-big.png" width="50%" alt=""><br>
-                                <h3 class="text-white" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">
+                                <h3 class="text-white" dir="auto" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">
                                     L’initiative de développement du Grand Casablanca par la créativité<img class="quote p-2"
                                         src="../images/icons/quote2.svg" alt=""></h3><br>
-                                <p class="text-white" key="text">
+                                <p class="text-white" dir="auto" key="text">
                                     Connectant les jeunes talents au patrimoine riche et multiple de Casablanca, « ATH’ART » est une initiative portée par CasaPatrimoine et par un ensemble d’acteurs économiques, culturels et de la société civile, visant à revaloriser le Patrimoine matériel et immatériel de Casablanca, à travers la créativité et l’art. <br><br> Créée au profit du vivier large de designers, d’artistes, d’architectes de créatifs et de talents qui innovent au quotidien, l’initiative ATHART fait aujourd’hui appel à votre créativité et à votre sens d’entreprenariat pour faire du patrimoine Casablancais une source de développement durable pour tous.
                                 </p>
                                 <div class="row mob mt-5 animate__animated animate__fadeIn animate__delay-1s">
@@ -344,7 +348,7 @@
                                 <p class="animate__animated animate__fadeIn animate__slower p1 participer-1">
                                     <span><img class="left-comma" width="20px" src="../images/icons/SVG/comma.svg"
                                             alt="" srcset=""></span>
-                                    <span key="quote" class="p1">
+                                    <span dir="auto" key="quote" class="p1">
                                         Alors, creusez et trouvez des idées originales <br>
                                         de projets culturels et innovants, qui peuvent promouvoir <br>
                                         le patrimoine culturel casablancais.
@@ -358,14 +362,14 @@
                             <img src="../images/logos/SVG/1.svg" style="width: 400px;"
                                 class="animate__animated animate__fadeInDownBig" alt="">
                             <br>
-                            <p class="animate__animated animate__fadeIn animate__slower" key="text">
+                            <p class="animate__animated animate__fadeIn animate__slower" dir="auto" key="text">
                                 Le Patrimoine matériel et immatériel Casablancais conserve un héritage unique, capable
                                 de porter des projets de développement socio-économique.
                                 <br><br>
                                 Inspirez-vous du Patrimoine Casablancais, et imaginez des projets innovants créateurs de
                                 richesse culturelle et économique :
                             </p>
-                            <div class="animate__animated animate__fadeIn animate__slower" key="list">
+                            <div class="animate__animated animate__fadeIn animate__slower" dir="auto" key="list">
                                 <p>Promotion du Patrimoine architectural Casablancais.</p>
                                 <p>Revalorisation du patrimoine Oral et des arts du spectacle <br>( Ahwach, L’Aïta, le
                                     Marsawi, Le style Ghiwan, Tagadda, Lemchaheb, poésie, contes, proverbes…)</p>
@@ -375,7 +379,7 @@
                             <p id="p1-mob" class="animate__animated animate__fadeIn animate__slower participer-1">
                                 <span><img class="left-comma" width="20px" src="../images/icons/SVG/comma.svg"
                                         alt="" srcset=""></span>
-                                <span key="quote">
+                                <span dir="auto" key="quote">
                                     Alors, creusez et trouvez des idées originales <br>
                                     de projets culturels et innovants, qui peuvent promouvoir <br>
                                     le patrimoine culturel casablancais.
@@ -403,7 +407,7 @@
                                 <p class="p2 participer-2">
                                     <span><img class="left-comma" width="20px" src="../images/icons/SVG/comma.svg"
                                             alt="" srcset=""></span>
-                                    <span key="quote" class="p2">
+                                    <span dir="auto" key="quote" class="p2">
                                         Soyez nombreux à imaginer des projets
                                         innovants et partagez-les pour gagner
                                         le Prix ATH'ART du Projet Innovant
@@ -417,7 +421,7 @@
                         <div class="col-md-6 col-lg-6 col-12 right-content participer-2">
                             <img src="../images/logos/SVG/2.svg" style="width: 400px;" alt="">
                             <br>
-                            <p key="text">
+                            <p dir="auto" key="text">
                                 Saviez-vous que les premiers plans urbains, qui ont servi pour modèles d’aménagement en
                                 Europe durant les années 50ans, ont été créés et expérimentés à Casablanca ? <br> <br>
                                 Cette ville qui témoigne de la naissance de l’urbanisme moderne, est un vrai symbole de
@@ -432,7 +436,7 @@
                             <p id="p2-mob" class="participer-2">
                                 <span><img class="left-comma" width="20px" src="../images/icons/SVG/comma.svg"
                                         alt="" srcset=""></span>
-                                <span key="quote">
+                                <span dir="auto" key="quote">
                                     Soyez nombreux à imaginer des projets
                                     innovants et partagez-les pour gagner
                                     le Prix ATH'ART du Projet Innovant
@@ -461,7 +465,7 @@
                                 <p class="p3 participer-3">
                                     <span><img class="left-comma" width="20px" src="../images/icons/SVG/comma.svg"
                                             alt="" srcset=""></span>
-                                    <span key="quote" class="p3">
+                                    <span dir="auto" key="quote" class="p3">
                                         Inspirez-vous de ce Patrimoine si riche,
                                         qui peut créer un impact, socio-économique
                                         pour notre ville. Proposez des projets pour mettre en valeur
@@ -476,7 +480,7 @@
                         <div class="col-md-6 col-lg-6 col-12 right-content participer-3">
                             <img src="../images/logos/SVG/3.svg" style="width: 400px;" alt="">
                             <br>
-                            <p key="text">
+                            <p dir="auto" key="text">
                                 Casablanca, une ville qui regorge de vraies potentialités naturelles, qui demeurent sous-exploitées.
                                 <br><br>
                                 Pourtant, la ville de Casablanca fait face à des enjeux environnementaux d’envergure. ATH'ART fait appel aux jeunes talents pour proposer des solutions innovantes et créatives pour sensibiliser, préserver et valoriser ce patrimoine vital pour le bien-être de tous les habitants.
@@ -484,7 +488,7 @@
                             <p id="p3-mob" class="participer-3">
                                 <span><img class="left-comma" width="20px" src="../images/icons/SVG/comma.svg"
                                         alt="" srcset=""></span>
-                                <span key="quote">
+                                <span dir="auto" key="quote">
                                     Inspirez-vous de ce Patrimoine si riche,
                                     qui peut créer un impact, socio-économique
                                     pour notre ville. Proposez des projets pour mettre en valeur
@@ -502,6 +506,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/flickity.pkgd.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/video-background.js"></script>
