--- a/src/pages/prix.html
+++ b/src/pages/prix.html
@@ -24,7 +24,6 @@
         <ul>
             <li><a href="/index.html">Accueil</a></li>
             <li><a href="./presentation.html">Présentation</a></li>
-            <li><a href="./participer.html">PARTICIPER</a></li>
             <li><a href="./reglement.html">Réglement du concours</a></li>
             <li><a href="./jury.html">JURY</a></li>
             <li><a href="./prix.html" class="menu-selected">PRIX</a></li>
@@ -33,6 +32,11 @@
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html"><img src="../images/logo.png" alt=""></a>
+            <ul class="row">
+                <li class="text-white mx-1" onclick="setLanguage('fr')">FR</li>
+                <li class="text-white mx-1">/</li>
+                <li class="text-white mx-1" onclick="setLanguage('ar')">AR</li>
+            </ul>
             <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent">
                 <img src="../images/icons/openNav.svg" alt="" id="openm">
             </button>
@@ -41,8 +45,8 @@
     <div class="container-fluid slider-container" style="overflow-y: hidden;">
         <div class="carousel" data-flickity='{ "fullscreen": true }'>
             <div class="carousel-cell">
-                <div class="content">
-                    <div class="row prix">
+                <div class="content prixx">
+                    <div dir="auto" key="p1" class="row prix">
                         <div class="col-md-5">
                             <h1 class="animate__bounceInLeft animate__animated">
                                 1<sup>er</sup> Prix toute <br>
@@ -61,8 +65,8 @@
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="content">
-                    <div class="row prix">
+                <div class="content prixx">
+                    <div dir="auto" key="p2" class="row prix">
                         <div class="col-md-5">
                             <h1 class="">
                                 1<sup>er</sup> prix <br> par catégorie
@@ -78,8 +82,8 @@
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="content">
-                    <div class="row prix">
+                <div class="content prixx">
+                    <div dir="auto" key="p3" class="row prix">
                         <div class="col-md-5">
                             <h1 class="">
                                 2<sup>ème</sup> Prix <br> par catégorie
@@ -95,8 +99,8 @@
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="content">
-                    <div class="row prix">
+                <div class="content prixx">
+                    <div dir="auto" key="p4"  class="row prix">
                         <div class="col-md-5">
                             <h1 class="">
                                 3<sup>ème</sup> Prix <br> par catégorie
@@ -112,8 +116,8 @@
                 </div>
             </div>
             <div class="carousel-cell">
-                <div class="content">
-                    <div class="row prix">
+                <div class="content prixx">
+                    <div dir="auto" key="p5" class="row prix">
                         <div class="col-md-5">
                             <h1 class="">
                                 Prix Coup <br> de Cœur <br> Grand public
@@ -133,6 +137,7 @@
             <div class="col-md-4"><img src="../images/icons/social.svg" alt=""></div>
         </div>
     </div>
+    <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/flickity.pkgd.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/video-background.js"></script>
