--- a/src/pages/reglement.html
+++ b/src/pages/reglement.html
@@ -46,8 +46,8 @@
         <div class="carousel" data-flickity='{ "fullscreen": true }'>
             <div class="carousel-cell">
                 <div class="content p-md-5" style="padding-top: 6rem !important;">
-                    <div class="row text-white reglement">
-                        <div class="col-md-8 animate__animated animate__bounceInRight animate__delay-1s">
+                    <div class="row text-white">
+                        <div class="col-md-8 animate__animated animate__bounceInRight animate__delay-1s reglement">
                             <h1 dir="auto" key="titre">Comment participer ?</h1>
                             <p dir="auto" key="desc">Vous êtes créatif, designer, peintre, musiciens, entrepreneur ou même simple citoyen avec
                                 pleines d’idées en tête, partagez avec nous vos projets de développement de Patrimoine
