arabic version update

--- a/src/pages/presentation.html
+++ b/src/pages/presentation.html
@@ -369,7 +369,7 @@
                                 Inspirez-vous du Patrimoine Casablancais, et imaginez des projets innovants créateurs de
                                 richesse culturelle et économique :
                             </p>
-                            <div class="animate__animated animate__fadeIn animate__slower" dir="auto" key="list">
+                            <div class="animate__animated animate__fadeIn animate__slower liste" dir="auto" key="list">
                                 <p>Promotion du Patrimoine architectural Casablancais.</p>
                                 <p>Revalorisation du patrimoine Oral et des arts du spectacle <br>( Ahwach, L’Aïta, le
                                     Marsawi, Le style Ghiwan, Tagadda, Lemchaheb, poésie, contes, proverbes…)</p>
