--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -20,12 +20,12 @@
     <div id="mainmenu" class="menu">
         <p><img src="../images/logo.png" alt=""></p>
         <img id="closem" class="" src="../images/icons/closeNav.svg" alt="">
-        <ul>
-            <li><a href="/index.html">Accueil</a></li>
-            <li><a href="./presentation.html">Présentation</a></li>
-            <li><a href="./reglement.html">Réglement du concours</a></li>
-            <li><a href="./jury.html" class="menu-selected">JURY</a></li>
-            <li><a href="./prix.html">PRIX</a></li>
+        <ul class="navigation">
+            <li class="nav-item"><a key="1" href="/index.html">Accueil</a></li>
+            <li class="nav-item"><a key="2" href="./presentation.html">Présentation</a></li>
+            <li class="nav-item"><a key="3" href="./reglement.html">Réglement du concours</a></li>
+            <li class="nav-item"><a key="4" href="./jury.html" class="menu-selected">JURY</a></li>
+            <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li>
         </ul>
     </div>
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="mt-5 row text-white g-2 jury-members">
-                            <div dir="auto" key="j1" class="col-md-4 text-center">
+                            <div key="j1" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lkhmari.png" alt="">
                                 <p class="">
                                     <span class="vert">NOUR-EDDINE LAKHMARI</span>
@@ -285,10 +285,10 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="row jury-members">
+                        <div class="row">
                             <div class="col-md-9"></div>
-                            <div class="col-md-3 sm-text-center"><button dir="auto" key="cta" class="mt-5 py-2 px-5 rounded-pill align-self-end btn-1">Comment
-                                participer</button></div>
+                            <div class="col-md-3 sm-text-center jury-members"><button dir="auto" key="cta" class="mt-5 py-2 px-5 rounded-pill align-self-end btn-1">Comment
+                                participer ?</button></div>
                         </div>
                         <div class="row m-3 p-2 border-bott social-icons">
                             <div class="col-md-4"><img src="../images/icons/social.svg" alt=""></div>
