--- a/src/pages/prix.html
+++ b/src/pages/prix.html
@@ -21,12 +21,12 @@
     <div id="mainmenu" class="menu">
         <p><img src="../images/logo.png" alt=""></p>
         <img id="closem" class="" src="../images/icons/closeNav.svg" alt="">
-        <ul>
-            <li><a href="/index.html">Accueil</a></li>
-            <li><a href="./presentation.html">Présentation</a></li>
-            <li><a href="./reglement.html">Réglement du concours</a></li>
-            <li><a href="./jury.html">JURY</a></li>
-            <li><a href="./prix.html" class="menu-selected">PRIX</a></li>
+        <ul class="navigation">
+            <li class="nav-item"><a key="1" href="/index.html">Accueil</a></li>
+            <li class="nav-item"><a key="2" href="./presentation.html">Présentation</a></li>
+            <li class="nav-item"><a key="3" href="./reglement.html">Réglement du concours</a></li>
+            <li class="nav-item"><a key="4" href="./jury.html">JURY</a></li>
+            <li class="nav-item"><a key="5" href="./prix.html" class="menu-selected">PRIX</a></li>
         </ul>
     </div>
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
