arabic version update

--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="mt-5 row text-white g-2 jury-members">
-                            <div key="j1" class="col-md-4 text-center">
+                            <div dir="auto" key="j1" class="col-md-4 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lkhmari.png" alt="">
                                 <p class="">
                                     <span class="vert">NOUR-EDDINE LAKHMARI</span>
