nav arabic version update

--- a/src/pages/reglement.html
+++ b/src/pages/reglement.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="row text-white reglement">
-                        <div class="col-md-3 reg animate__animated animate__bounceInRight" dir="auto" key="phase-1">
+                        <div class="col-md-3 reg animate__animated animate__bounceInRight" key="phase-1">
                             <img class="mb-3" width="120px" src="../images/SVG/phase1.svg" alt="">
                             <p class="text-start">
                                 <span class="border-bott">du XX Mois au XX Mois 2020</span>
@@ -67,7 +67,7 @@
                                     href="#"> www.athart.ma/candidature</a>
                             </p>
                         </div>
-                        <div class="col-md-3 reg  animate__animated animate__bounceInRight" dir="auto" key="phase-2">
+                        <div class="col-md-3 reg  animate__animated animate__bounceInRight" key="phase-2">
                             <img class="mb-3" width="120px" src="../images/SVG/phase2.svg" alt="">
                             <p class="text-start">
                                 <span class="border-bott">du XX Mois au XX Mois 2020</span>
@@ -76,7 +76,7 @@
                                 répondant à la charte de l’initiative détaillée dans le règlement du concours.
                             </p>
                         </div>
-                        <div class="col-md-3 reg  animate__animated animate__bounceInRight" dir="auto" key="phase-3">
+                        <div class="col-md-3 reg  animate__animated animate__bounceInRight" key="phase-3">
                             <img class="mb-3" width="120px" src="../images/SVG/phase3.svg" alt="">
                             <p class="text-start">
                                 <span class="border-bott">du XX Mois au XX Mois 2020</span>
@@ -85,7 +85,7 @@
                                 belles propositions. Cela peut être moins ou plus selon la qualité des rendus.
                             </p>
                         </div>
-                        <div class="col-md-3 reg  animate__animated animate__bounceInRight" dir="auto" key="phase-4">
+                        <div class="col-md-3 reg  animate__animated animate__bounceInRight" key="phase-4">
                             <img class="mb-3" width="120px" src="../images/SVG/phase4.svg" alt="">
                             <p class="text-start">
                                 <span class="border-bott">du XX Mois au XX Mois 2020</span>
